<resources>
    <string name="app_name">Freshguard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_scan">Scan</string>
    <string name="title_tracking">History</string>
    <string name="title_profile">Profile</string>
    <string name="title_valid">Validasi</string>
    <string name="title_result">Hasil Scan</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_scan1">Scan Disini!</string>
    <string name="img_scan1">Photo scan</string>
    <string name="text_scan2">Pilih Metode Scan Kamu: </string>
    <string name="btn_scan1">Gallery</string>
    <string name="btn_scan2">Camera</string>
    <string name="text_scan3">Analisis Hasil Scan</string>
    <string name="text_scan4">Hasil Scan</string>
    <string name="text_scan5">Bagaimana Bau dan Tekstur Sayur/Buah Ini?</string>
    <string name="text_scan6">Apakah sayur/buah ini memiliki bau segar atau menyengat?</string>
    <string name="text_scan7">Bagaimana tekstur sayur/buah ini?</string>
    <string name="text_scan8">Apakah toko yang menjual sayur dan buah tersebut sudah terverifikasi aman?</string>
    <string name="RG1">Segar</string>
    <string name="RG2">Busuk</string>
    <string name="RG3">Netral</string>
    <string name="RG4">Keras</string>
    <string name="RG5">Lembek</string>
    <string name="RG6">Normal</string>
    <string name="RG7">iya, sudah terverifikasi</string>
    <string name="RG8">Ragu-Ragu</string>
    <string name="RG9">Tidak, belum terverifikasi</string>
    <string name="btn_scan5">Lihat Hasil Scan</string>
    <string name="btn_scan6">Kirim data</string>
    <string name="btn_scan3">Scan Sayur dan Buah Lainnya</string>
    <string name="btn_scan4">Next</string>
    <string name="text_track1">Historis Scan Harian Kamu</string>
    <string name="text_track2">Tanggal Scan: dd/mm/yyyy</string>
    <string name="text_track3">ini dia riwayat scan kamu, pertahankan pola hidup sehat mu!</string>
    <string name="text_track4">Nama Sayur/Buah</string>
    <string name="text_track5">Score Kesegaran: %1$s</string>
    <string name="text_track6">Tanggal Scan: %s</string>
    <string name="text_track7">Berikut hasil scanning sayur dan buah kamu:</string>
    <string name="text_store1">Daftar Toko yang menjual sayur dan buah: </string>
    <string name="text_store2">Nama Toko</string>
    <string name="text_store3">Status Toko</string>
    <string name="text_store4">Lokasi Toko</string>
    <string name="freshness_score_label">Score Kesegaran: %1$s</string>
    <string name="produce_label">Jenis Produk: %1$s</string>
    <string name="consumable_label">Layak Konsumsi</string>
    <string name="not_consumable_label">Tidak Layak Konsumsi</string>
    <string name="consumable_yes">Produk ini layak dikonsumsi</string>
    <string name="consumable_no">Produk ini tidak layak dikonsumsi</string>
    <string name="unknown">tidak diketahui</string>
    <string name="login_title">Login</string>
    <string name="signup_title">SignUp</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="password_icon_desc">Password</string>
    <string name="username_icon_desc">Username</string>
    <string name="login_text1">Belum punya akun? yuk registrasi</string>
    <string name="login_text2">Sign up</string>
    <string name="button">Login</string>
    <string name="logo_desc">Description</string>
    <string name="language_label">Bahasa</string>
    <string name="language_value">Bahasa Indonesia</string>
    <string name="name_regis">Name</string>
    <string name="username_regis">Username</string>
    <string name="email_regis">Email</string>
    <string name="password_regis">Password</string>
    <string name="register_btn">Register</string>
    <string name="text_welcome">Hallo, selamat datang Freshguard! Silahkan daftarkan diri kalian</string>
    <string name="text_scan">Hai! Mau Scan apa Hari ini?</string>
    <string name="text_login1">hallo, selamat datang silahkan login dahulu</string>
    <string name="btn_login">Login</string>
    <string name="logout">Logout</string>
    <string name="store">Store</string>
    <string name="store_maps">Store Maps</string>
    <string name="text_store">Rekomendasi Lokasi Toko Sayur dan Buah</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="status">Status</string>
    <string name="lokasi">Lokasi</string>
    <string name="alamat_toko">Alamat Toko</string>
</resources>