<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/green_200"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tokoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_toko"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tokoStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tokoLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lokasi"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/tokoAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat_toko"
        android:layout_marginTop="4dp" />
</LinearLayout>
