<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".ui.scan.ScanFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_scan1"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textColor="@color/purple_300"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/imageScan"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/img_scan1"
        android:src="@drawable/baseline_insert_photo_24"
        android:layout_marginTop="15dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_scan2"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan1"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/purple_300"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan2"
            android:backgroundTint="@color/purple_300"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonValidation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_scan4"
        android:backgroundTint="@color/purple_200"
        tools:ignore="ButtonStyle" />

</LinearLayout>
