<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.freshguard.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" >
        <action
            android:id="@+id/action_navigation_scan_to_validationFragment"
            app:destination="@id/validationFragment" />
    </fragment>
    <fragment
        android:id="@+id/HistoryFragment"
        android:name="com.example.freshguard.ui.tracking.HistoryFragment"
        android:label="@string/title_tracking"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/validationFragment"
        android:name="com.example.freshguard.ui.scan.ValidationFragment"
        android:label="@string/title_valid"
        tools:layout="@layout/fragment_validation" >
        <action
            android:id="@+id/action_validationFragment_to_scanResultActivity"
            app:destination="@id/scanResultActivity" />
    </fragment>
    <activity
        android:id="@+id/scanResultActivity"
        android:name="com.example.freshguard.ui.scan.ScanResultActivity"
        android:label="@string/title_result"
        tools:layout="@layout/activity_scan_result" />
</navigation>