<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.scan.ScanResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_scan3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/purple_300"/>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/img_scan1"
            app:srcCompat="@drawable/baseline_insert_photo_24"
            android:background="@drawable/rounded_background"
            android:layout_margin="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/text_scan4"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_background2"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/text_scan4"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_background2"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/text_scan4"
                android:gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_background2"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan3"
            android:backgroundTint="@color/purple_200"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_scan4"
            android:backgroundTint="@color/purple_300"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>