<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    android:backgroundTint="@color/yellow_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Gambar di sebelah kiri -->
        <ImageView
            android:id="@+id/img_scan_result"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/img_scan1"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <!-- Kontainer untuk judul dan deskripsi di sebelah kanan gambar -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry">

            <!-- Judul -->
            <TextView
                android:id="@+id/tv_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_track4"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="4dp" />

            <!-- Deskripsi -->
            <TextView
                android:id="@+id/tv_decs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_track5"
                android:textSize="14sp"
                 />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
